# Language-Modelling

./: .gitignore  README.md  bigram_language_model.py  char_tokenizer.py  language_dataset.py  pyproject.toml  train_bigram.py  train_transformer.py  transformer_components.py  transformer_language_model.py
.devcontainer/: devcontainer.json
configs/experiements/: bigram.yaml  medium_transformer_bpe.yaml  small_transformer.yaml  small_transformer_bpe.yaml
data/tokenizers/: gutenberg_tokenizer_4096.json  shakespeare_tokenizer.json  shakespeare_tokenizer_4096.json
scripts/: benchmark_tokenizers.py  config_demo.py  download_gutenberg.py  train_bigram.py  train_bpe.py  train_bpe_gutenburg.py  train_bpe_wiki.py  train_transformer.py  train_transformer_gutenberg.py  train_transformer_gutenburg.py  wiki_dataset.py
scripts/mech_interp/: toy_model_for_sae.pth  toy_models_small.pth  train_sae.ipynb  train_sae.py  train_toy_model_for_sae.ipynb  train_toy_model_for_sae.py  train_toy_model_for_sae_big.ipynb  train_toy_model_of_superposition.py  train_toy_models_of_superposition.ipynb  train_toy_models_of_superposition.py  train_toy_models_of_superposition_big.ipynb
scripts/tokenizers/: train_bpe_gutenberg.py
scripts/transformers/: benchmark_rope.py
scripts/utils/: __init__.py  args_parser.py  config_loader.py  mixed_precision.py
src/datasets/: __init__.py  gutenberg_dataset.py  language_dataset.py
src/lm_datasets/: gutenberg_dataset.py  language_dataset.py  offset_sampler.py
src/lm_tokenizers/: README.md  __init__.py  base.py  char.py
src/mech_interp/: README.md  __init__.py  geometric_median.py  importance.py  loss.py  plot.py  script_utils.py  sparse_autoencoder.py  synthetic_sparse_data_generator.py  toy_model.py
src/models/: __init__.py  bigram.py  transformer.py  transformer_components.py
src/script_utils/: config_loader.py
src/tokenizers/: __init__.py  base.py  byte.py  char.py  save_utils.py
src/utils/: args_parser.py  config_loader.py
tests/: lcov.info
tests/datasets/: test_datasets.py  test_gutenberg_load.py  test_language_dataset.py  test_offset_sampler.py
tests/mech_interp/: test_importance.py  (+1 more)
tokenizers/: __init__.py
(+76 files in other folders)
