[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "language-modelling"
version = "0.1.0"
description = "Language modelling experiments with transformer models and custom tokenizers"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "torch>=2.0.0",
    "tqdm",
    "regex",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=4.0.0",
    "matplotlib",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = ["--cov=src", "--cov-report=xml"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "^\\s*\\.\\.\\.\\s*$"
]