[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "language-modelling"
version = "0.1.0"
description = "Language modelling experiments with transformer models and custom tokenizers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "torch>=2.0.0",
    "tqdm",
    "regex",
    "pyyaml",
    "wandb",
    "datasets",
    "hf_transfer",
    "sortedcontainers"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=4.0.0",
    "matplotlib",
    "ipykernel>=6.30.0",
    "nbformat>=5.10.4",
    "plotly>=6.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = ["--cov=src", "--cov-report=xml"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "^\\s*\\.\\.\\.\\s*$"
]